[package]
name = "esp-rust-app"
version = "0.1.0"
authors = ["Pablo Ridolfi <pabloridolfi@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0"}
rgb-led = { path = "./common/lib/rgb-led" }
wifi = { path = "./common/lib/wifi" }
log = "=0.4.17"
toml-cfg = "=0.1.3"
anyhow = "=1.0.69"

[build-dependencies]
embuild = "0.31.1"
anyhow = "=1.0.69"
toml-cfg = "=0.1.3"
